<resources>
    <string name="app_name">Movies Series Data Center</string>
    <string name="input_email">Input Email :</string>
    <string name="email_instruction">Email</string>
    <string name="input_password">Input Password :</string>
    <string name="password_instruction">Password</string>
    <string name="forget_password_description">Forget Password ?</string>
    <string name="button_login">Login</string>
    <string name="reset_button">Reset</string>
    <string name="register_description">Don\'t have any account ? Register Here</string>
    <string name="google_login_description">OR</string>
    <string name="back_button">Back Button</string>
    <string name="register_title">Register Menu</string>
    <string name="input_name">Input Name :</string>
    <string name="name_instruction">Name</string>
    <string name="confirmation_password">Re-Input Password :</string>
    <string name="confirmation_password_instruction">Confirmation Password</string>
    <string name="register_button">Register</string>
    <string name="forget_password_instruction1">Forget Password ?</string>
    <string name="forget_password_instruction2">We will send you message via email</string>
    <string name="submit_button">Submit</string>
    <string name="movies">Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="most_popular_tv_shows">Most Popular TV Shows</string>
    <string name="top_rated_tv_shows">Top Rated TV Shows</string>
    <string name="on_the_air_tv_shows">On The Air TV Shows</string>
    <string name="text_info">\u00A9 MSDC 2022</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="no_results">No Results</string>
    <string name="something_wrong">Something Wrong with The Connection</string>
    <string name="search_movie_or_tvshows">Search Movie or TV Shows</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="login_title">Login Menu</string>
    <string name="movie_recommendations">Movie Recommendations</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="tv_airing_today">TV Airing Today</string>
    <string name="my_account">My Account</string>
    <string name="menu_tv_shows">TV Shows</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_my_account">My Account</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profiles">My Profiles</string>
    <string name="menu_movie">Movie</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">email@gmail.com</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_search_desc">Button Search</string>
    <string name="button_menu_desc">Button Menu</string>
    <string name="home">Home</string>
    <string name="my_favorite_movies">My Favorite Movies</string>
    <string name="my_favorite_tv_shows">My Favorite TV Shows</string>
    <string name="search">Search</string>
    <string name="image_star_rating">Image of Star Rating</string>
    <string name="overview">Overview :</string>
    <string name="trending_person_desc">Trending Person In This Week</string>
    <string name="trending_tv_shows_desc">Trending TV Shows In This Week</string>
    <string name="trending_movies_desc">Trending Movies In This Week</string>
    <string name="credit_name">Name</string>
    <string name="credit_gender">Gender</string>
    <string name="credit_departement">Departement</string>
    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="search_data">Search Data</string>
    <string name="input_query">Input Query</string>
    <string name="input_search_query">Input Search Query :</string>
    <string name="select_search_type">Select Search Type :</string>
    <string name="select_filter_type">Select Filter Type :</string>
    <string name="filter_movie_or_tv_shows">Filter Movie or TV Shows</string>
    <string name="genre">Genre :</string>
    <string name="select_genre_type">Select Genre Type</string>
    <string name="filter_data">Filter Data</string>
    <string name="sort_by">Sort By :</string>
    <string name="select_region">Select Region</string>
    <string name="region">Region :</string>
    <string name="select_release_year">Select Release Year</string>
    <string name="year">Year :</string>
    <string name="filter">Filter</string>
    <string name="text_no_filter">No Filter Result, Try Again Later</string>
    <string name="text_genres">Genres</string>
    <string name="text_keywords">Keywords</string>
    <string name="text_images_gallery">Images Gallery</string>
    <string name="text_movie_credit_cast">Movie Credit Cast</string>
    <string name="text_movie_credit_crew">Movie Credit Crew</string>
    <string name="text_now_playing_movies">Now Playing Movies</string>
    <string name="text_no_result">No Result, Try Again Later</string>
    <string name="text_popular_movies">Popular Movies</string>
    <string name="text_top_rated_movies">Top Rated Movies</string>
    <string name="text_upcoming_movies">Upcoming Movies</string>
    <string name="text_airing_today_tv_shows">Airing Today TV Shows</string>
    <string name="text_on_air_tv_shows">On Air TV Shows</string>
    <string name="text_popular_tv_shows">Popular TV Shows</string>
    <string name="text_top_rated_tv_shows">Top Rated TV Shows</string>
    <string name="sort_spinner">Sort Spinner</string>
    <string name="tv_episode_list">Episodes List :</string>
    <string name="tv_search_result">Search Result :</string>

    <string-array name="movieGenreList">
        <item>Not Selected</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="tvGenreList">
        <item>Not Selected</item>
        <item>Action Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Kids</item>
        <item>Mystery</item>
        <item>News</item>
        <item>Reality</item>
        <item>Sci-Fi and Fantasy</item>
        <item>Soap</item>
        <item>Talk</item>
        <item>War and Politics</item>
        <item>Western</item>
    </string-array>

    <string-array name="yearList">
        <item>Not Selected</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string-array name="regionList">
        <item>Not Selected</item>
        <item>Australia</item>
        <item>China</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hong Kong</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>South Korea</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>

    <string-array name="sortList">
        <item>Popularity (Ascending)</item>
        <item>Popularity (Descending)</item>
        <item>Revenue (Ascending)</item>
        <item>Revenue (Descending)</item>
        <item>Release Date (Ascending)</item>
        <item>Release Date (Descending)</item>
        <item>Vote Average (Ascending)</item>
        <item>Vote Average (Descending)</item>
        <item>Vote Count (Ascending)</item>
        <item>Vote Count (Descending)</item>
    </string-array>
</resources>