<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/containerFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/bg_text_title">

        <TextView
            android:id="@+id/textFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_movie_or_tv_shows"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textFilterType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/select_filter_type"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radioButtonMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/radioButtonTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_shows"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/containerFilterGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textFilterGenre"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/genre"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerFilterGenre"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:contentDescription="@string/select_genre_type"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFilterYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textFilterYear"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/year"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerFilterYear"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:contentDescription="@string/select_release_year"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFilterRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textFilterRegion"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/region"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerFilterRegion"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:contentDescription="@string/select_region"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textSortBy"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/sort_by"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerSortBy"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:contentDescription="@string/sort_by"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_layout"
            android:text="@string/filter_data"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>